PL3/gramatica/EppParser.java
// Generated from Epp.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class EppParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, ASIGNAR=3, MOSTRAR=4, TERMINAR=5, SI=6, SINO=7, NO=8, 
		PARA=9, MIENTRAS=10, ARROW=11, COND_END=12, SEP=13, ASSIGN=14, PLUS=15, 
		MINUS=16, MUL=17, DIV=18, PLUS_ASSIGN=19, MINUS_ASSIGN=20, AND=21, OR=22, 
		NOT=23, EQ=24, NEQ=25, LE=26, GE=27, LT=28, GT=29, FLOAT=30, NUMBER=31, 
		TRUE=32, FALSE=33, STRING=34, ID=35, COMMENT=36, WS=37;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_assignInitStmt = 2, RULE_assignReStmt = 3, 
		RULE_printStmt = 4, RULE_forStmt = 5, RULE_whileStmt = 6, RULE_ifStmt = 7, 
		RULE_condition = 8, RULE_thenHeader = 9, RULE_elseifHeader = 10, RULE_elseHeader = 11, 
		RULE_block = 12, RULE_expr = 13, RULE_orExpr = 14, RULE_andExpr = 15, 
		RULE_eqExpr = 16, RULE_relExpr = 17, RULE_addExpr = 18, RULE_mulExpr = 19, 
		RULE_unary = 20, RULE_atom = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "assignInitStmt", "assignReStmt", "printStmt", 
			"forStmt", "whileStmt", "ifStmt", "condition", "thenHeader", "elseifHeader", 
			"elseHeader", "block", "expr", "orExpr", "andExpr", "eqExpr", "relExpr", 
			"addExpr", "mulExpr", "unary", "atom"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'asignar'", "'mostrar'", "'terminar'", "'si'", "'sino'", 
			"'no'", "'para'", "'mientras'", "'->'", "'???'", null, "'='", "'+'", 
			"'-'", "'*'", "'/'", "'+='", "'-='", "'&&'", "'||'", "'!'", "'=='", "'!='", 
			"'<='", "'>='", "'<'", "'>'", null, null, "'verdadero'", "'falso'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "ASIGNAR", "MOSTRAR", "TERMINAR", "SI", "SINO", "NO", 
			"PARA", "MIENTRAS", "ARROW", "COND_END", "SEP", "ASSIGN", "PLUS", "MINUS", 
			"MUL", "DIV", "PLUS_ASSIGN", "MINUS_ASSIGN", "AND", "OR", "NOT", "EQ", 
			"NEQ", "LE", "GE", "LT", "GT", "FLOAT", "NUMBER", "TRUE", "FALSE", "STRING", 
			"ID", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Epp.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public EppParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(EppParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<IfStmtContext> ifStmt() {
			return getRuleContexts(IfStmtContext.class);
		}
		public IfStmtContext ifStmt(int i) {
			return getRuleContext(IfStmtContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EppListener ) ((EppListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EppListener ) ((EppListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EppVisitor ) return ((EppVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 67654190618L) != 0)) {
				{
				setState(46);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(44);
					statement();
					}
					break;
				case 2:
					{
					setState(45);
					ifStmt();
					}
					break;
				}
				}
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(51);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmtWhileContext extends StatementContext {
		public WhileStmtContext whileStmt() {
			return getRuleContext(WhileStmtContext.class,0);
		}
		public StmtWhileContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EppListener ) ((EppListener)listener).enterStmtWhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EppListener ) ((EppListener)listener).exitStmtWhile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EppVisitor ) return ((EppVisitor<? extends T>)visitor).visitStmtWhile(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmtReAssignContext extends StatementContext {
		public AssignReStmtContext assignReStmt() {
			return getRuleContext(AssignReStmtContext.class,0);
		}
		public StmtReAssignContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EppListener ) ((EppListener)listener).enterStmtReAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EppListener ) ((EppListener)listener).exitStmtReAssign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EppVisitor ) return ((EppVisitor<? extends T>)visitor).visitStmtReAssign(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmtPrintContext extends StatementContext {
		public PrintStmtContext printStmt() {
			return getRuleContext(PrintStmtContext.class,0);
		}
		public StmtPrintContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EppListener ) ((EppListener)listener).enterStmtPrint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EppListener ) ((EppListener)listener).exitStmtPrint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EppVisitor ) return ((EppVisitor<? extends T>)visitor).visitStmtPrint(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmtForContext extends StatementContext {
		public ForStmtContext forStmt() {
			return getRuleContext(ForStmtContext.class,0);
		}
		public StmtForContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EppListener ) ((EppListener)listener).enterStmtFor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EppListener ) ((EppListener)listener).exitStmtFor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EppVisitor ) return ((EppVisitor<? extends T>)visitor).visitStmtFor(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmtInitAssignContext extends StatementContext {
		public AssignInitStmtContext assignInitStmt() {
			return getRuleContext(AssignInitStmtContext.class,0);
		}
		public StmtInitAssignContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EppListener ) ((EppListener)listener).enterStmtInitAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EppListener ) ((EppListener)listener).exitStmtInitAssign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EppVisitor ) return ((EppVisitor<? extends T>)visitor).visitStmtInitAssign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(58);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ASIGNAR:
				_localctx = new StmtInitAssignContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(53);
				assignInitStmt();
				}
				break;
			case ID:
				_localctx = new StmtReAssignContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(54);
				assignReStmt();
				}
				break;
			case MOSTRAR:
				_localctx = new StmtPrintContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(55);
				printStmt();
				}
				break;
			case PARA:
				_localctx = new StmtForContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(56);
				forStmt();
				}
				break;
			case MIENTRAS:
				_localctx = new StmtWhileContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(57);
				whileStmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignInitStmtContext extends ParserRuleContext {
		public TerminalNode ASIGNAR() { return getToken(EppParser.ASIGNAR, 0); }
		public TerminalNode ID() { return getToken(EppParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(EppParser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEP() { return getToken(EppParser.SEP, 0); }
		public AssignInitStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignInitStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EppListener ) ((EppListener)listener).enterAssignInitStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EppListener ) ((EppListener)listener).exitAssignInitStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EppVisitor ) return ((EppVisitor<? extends T>)visitor).visitAssignInitStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignInitStmtContext assignInitStmt() throws RecognitionException {
		AssignInitStmtContext _localctx = new AssignInitStmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_assignInitStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(ASIGNAR);
			setState(61);
			match(ID);
			setState(62);
			match(ASSIGN);
			setState(63);
			expr();
			setState(64);
			match(SEP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignReStmtContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(EppParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEP() { return getToken(EppParser.SEP, 0); }
		public TerminalNode ASSIGN() { return getToken(EppParser.ASSIGN, 0); }
		public TerminalNode PLUS_ASSIGN() { return getToken(EppParser.PLUS_ASSIGN, 0); }
		public TerminalNode MINUS_ASSIGN() { return getToken(EppParser.MINUS_ASSIGN, 0); }
		public AssignReStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignReStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EppListener ) ((EppListener)listener).enterAssignReStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EppListener ) ((EppListener)listener).exitAssignReStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EppVisitor ) return ((EppVisitor<? extends T>)visitor).visitAssignReStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignReStmtContext assignReStmt() throws RecognitionException {
		AssignReStmtContext _localctx = new AssignReStmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_assignReStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(ID);
			setState(67);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 1589248L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(68);
			expr();
			setState(69);
			match(SEP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrintStmtContext extends ParserRuleContext {
		public TerminalNode MOSTRAR() { return getToken(EppParser.MOSTRAR, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEP() { return getToken(EppParser.SEP, 0); }
		public PrintStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EppListener ) ((EppListener)listener).enterPrintStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EppListener ) ((EppListener)listener).exitPrintStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EppVisitor ) return ((EppVisitor<? extends T>)visitor).visitPrintStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintStmtContext printStmt() throws RecognitionException {
		PrintStmtContext _localctx = new PrintStmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_printStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(MOSTRAR);
			setState(72);
			expr();
			setState(73);
			match(SEP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ForStmtContext extends ParserRuleContext {
		public TerminalNode PARA() { return getToken(EppParser.PARA, 0); }
		public AssignInitStmtContext assignInitStmt() {
			return getRuleContext(AssignInitStmtContext.class,0);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public AssignReStmtContext assignReStmt() {
			return getRuleContext(AssignReStmtContext.class,0);
		}
		public TerminalNode ARROW() { return getToken(EppParser.ARROW, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode TERMINAR() { return getToken(EppParser.TERMINAR, 0); }
		public ForStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EppListener ) ((EppListener)listener).enterForStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EppListener ) ((EppListener)listener).exitForStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EppVisitor ) return ((EppVisitor<? extends T>)visitor).visitForStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ForStmtContext forStmt() throws RecognitionException {
		ForStmtContext _localctx = new ForStmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_forStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(PARA);
			setState(76);
			assignInitStmt();
			setState(77);
			condition();
			setState(78);
			assignReStmt();
			setState(79);
			match(ARROW);
			setState(80);
			block();
			setState(81);
			match(TERMINAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WhileStmtContext extends ParserRuleContext {
		public TerminalNode MIENTRAS() { return getToken(EppParser.MIENTRAS, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode ARROW() { return getToken(EppParser.ARROW, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode TERMINAR() { return getToken(EppParser.TERMINAR, 0); }
		public WhileStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EppListener ) ((EppListener)listener).enterWhileStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EppListener ) ((EppListener)listener).exitWhileStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EppVisitor ) return ((EppVisitor<? extends T>)visitor).visitWhileStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhileStmtContext whileStmt() throws RecognitionException {
		WhileStmtContext _localctx = new WhileStmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_whileStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(MIENTRAS);
			setState(84);
			condition();
			setState(85);
			match(ARROW);
			setState(86);
			block();
			setState(87);
			match(TERMINAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfStmtContext extends ParserRuleContext {
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public ThenHeaderContext thenHeader() {
			return getRuleContext(ThenHeaderContext.class,0);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public TerminalNode TERMINAR() { return getToken(EppParser.TERMINAR, 0); }
		public List<ElseifHeaderContext> elseifHeader() {
			return getRuleContexts(ElseifHeaderContext.class);
		}
		public ElseifHeaderContext elseifHeader(int i) {
			return getRuleContext(ElseifHeaderContext.class,i);
		}
		public ElseHeaderContext elseHeader() {
			return getRuleContext(ElseHeaderContext.class,0);
		}
		public IfStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EppListener ) ((EppListener)listener).enterIfStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EppListener ) ((EppListener)listener).exitIfStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EppVisitor ) return ((EppVisitor<? extends T>)visitor).visitIfStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfStmtContext ifStmt() throws RecognitionException {
		IfStmtContext _localctx = new IfStmtContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ifStmt);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			condition();
			setState(90);
			thenHeader();
			setState(91);
			block();
			setState(97);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(92);
					elseifHeader();
					setState(93);
					block();
					}
					} 
				}
				setState(99);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SINO || _la==NO) {
				{
				setState(100);
				elseHeader();
				setState(101);
				block();
				}
			}

			setState(105);
			match(TERMINAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConditionContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode COND_END() { return getToken(EppParser.COND_END, 0); }
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EppListener ) ((EppListener)listener).enterCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EppListener ) ((EppListener)listener).exitCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EppVisitor ) return ((EppVisitor<? extends T>)visitor).visitCondition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_condition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			expr();
			setState(108);
			match(COND_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ThenHeaderContext extends ParserRuleContext {
		public TerminalNode SI() { return getToken(EppParser.SI, 0); }
		public TerminalNode ARROW() { return getToken(EppParser.ARROW, 0); }
		public ThenHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_thenHeader; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EppListener ) ((EppListener)listener).enterThenHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EppListener ) ((EppListener)listener).exitThenHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EppVisitor ) return ((EppVisitor<? extends T>)visitor).visitThenHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ThenHeaderContext thenHeader() throws RecognitionException {
		ThenHeaderContext _localctx = new ThenHeaderContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_thenHeader);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(SI);
			setState(111);
			match(ARROW);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElseifHeaderContext extends ParserRuleContext {
		public TerminalNode SINO() { return getToken(EppParser.SINO, 0); }
		public TerminalNode SI() { return getToken(EppParser.SI, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode ARROW() { return getToken(EppParser.ARROW, 0); }
		public ElseifHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elseifHeader; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EppListener ) ((EppListener)listener).enterElseifHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EppListener ) ((EppListener)listener).exitElseifHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EppVisitor ) return ((EppVisitor<? extends T>)visitor).visitElseifHeader(this);
			else return visitor.visitChildren(this);
		}
	}
